# formations-cpp

./: README.md
c++ 1/: COURSE C++ 1.pptx  booleans.cpp  functions.cpp  helloworld.cpp  inputoutput.cpp  intro_containers.cpp  variables.cpp
c++ 2/: COURSE C++ 2.pptx
c++ 3/: COURSE C++3.pptx
c++ 4/: COURSE C++4.pptx
c++ 5/flappybird/: Application.cpp  Application.hpp  Bird.cpp  Bird.hpp  CMakeLists.txt  CenterOrigin.hpp  Context.hpp  MenuScreen.cpp  MenuScreen.hpp  MyWindow.hpp  Pipes.cpp  Pipes.hpp  PlayScreen.cpp  PlayScreen.hpp  ResourceHolder.hpp  ResourceIdentifiers.hpp  Screen.hpp  main.cpp
c++ 5/hellocircle/: CMakeLists.txt  main.cpp
